force-app/main/default/objects/Lead/fields/Lead_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Full_Name__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Full Name</label>
    <type>Text</type>
</CustomField>