force-app/main/default/objects/Lead/fields/Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_ID__c</fullName>
    <label>Master ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>