force-app/main/default/objects/Lead/fields/Seeking_Information__c.field-meta.xml
<CustomField>
    <fullName>Seeking_Information__c</fullName>
    <label>Seeking Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>